fix content width for services block on mobile

--- a/src/styles/blocks/services.scss
+++ b/src/styles/blocks/services.scss
@@ -17,7 +17,7 @@
   }
 
   &__texts {
-    width: 280px;
+    width: 100%;
     flex-shrink: 0;
 
     @include onTablet {
@@ -39,12 +39,6 @@
 
   &__description {
     margin-bottom: 48px;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-    height: 105px;
 
     font-family: "Open Sans", sans-serif;
     font-weight: 400;
